--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,53 +1,67 @@
 .card {
-    max-width: 300px;
-    max-height: 600px;
-    background-color: #fff;
+    width: 23rem;
+    height: 50vh;
+    background-color: white;
+    border: 1px solid #ddd;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin: 20px;
-    flex: 1 1 calc(100% / 3 - 10px); /* Tres tarjetas por fila con espacio */
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
 }
 
 .card img {
     width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 10px 10px 0 0;
+    height: 200px;
+    object-fit: contain;
+    border-bottom: 1px solid #ddd;
+    padding: 20px;
 }
 
 .card-content {
     padding: 20px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-content h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+    margin: 0;
+    font-size: 20px;
     color: #333;
 }
 
 .card-content p {
-    font-size: 1em;
+    flex-grow: 1;
     color: #666;
-    margin-bottom: 20px;
+    margin: 10px 0;
 }
 
-.card-content .btn {
+
+.btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #ff5722; /* Cambia el color de fondo según tu preferencia */
     color: white;
-    text-decoration: none;
+    background-color: #FF5722;
+    border: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 10px;
+    align-self: flex-end;
+    transition: background-color 0.3s, transform 0.1s;
 }
 
-.card-content .btn:hover {
-    background-color: #ff7043; /* Cambia el color de fondo al pasar el mouse */
+.btn:hover {
+    background-color: #FF5722;
 }
 
-.container-cards{
-    display: flex;
-    flex-wrap: wrap;
+.btn:active {
+    transform: scale(0.95);
 }
