--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -8,3 +8,48 @@ h1{
     flex-wrap: wrap;
     margin-left: 5.8%;
 }
+
+.container {
+    width: 100%;
+    margin: auto;
+    padding: 20px;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.filter {
+   display: flex;
+   width: 100%;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 30px;
+}
+
+#searchInput {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200%;
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+
+.filter {
+    display:flex;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+    margin-left: 11%;
+    gap: 30%;
+}
+.filter .checkbox{
+    display: grid;
+}
