--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -21,11 +21,14 @@
     object-fit: contain;
     border-bottom: 1px solid #ddd;
     padding: 20px;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .card-content {
     padding: 20px;
     flex-grow: 1;
+    flex-shrink: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -35,10 +38,13 @@
     margin: 0;
     font-size: 20px;
     color: #333;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .card-content p {
     flex-grow: 1;
+    flex-shrink: 1;
     color: #666;
     margin: 10px 0;
 }
@@ -60,6 +66,7 @@
 
 .btn:hover {
     background-color: #FF5722;
+    cursor: pointer;
 }
 
 .btn:active {
