--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,55 @@
-<div class="banner">
-    <img src="../../assets/imagenes/diseno-tiendas-virtuales.png" alt="Descripción de la imagen">
-    <div class="contenido">
-        <h2>Título del Banner</h2>
-        <p>Descripción o mensaje breve que complementa el título.</p>
-        <a href="#" class="btn">Botón de llamada a la acción</a>
+<div class="container">
+    <div class="slider-frame">
+        <ul>
+            <li><img src="../../assets/imagenes/img2.jpg" alt=""></li>
+            <li><img src="../../assets/imagenes/diseno-tiendas-virtuales.png" alt=""></li>
+            <li><img src="../../assets/imagenes/img3.jpg" alt=""></li>
+            <li><img src="../../assets/imagenes/diseno-tiendas-virtuales-2.png" alt=""></li>
+        </ul>
+        <div class="contenido">
+            <h1>La mejor tienda para ser Estafado</h1>
+            <p>Estafados es tu tienda virtual de confianza, donde la pasión por la moda, la tecnología y los productos
+                innovadores se encuentran. Nos enorgullecemos de ofrecer una amplia selección de artículos de alta
+                calidad que satisfacen todos los gustos y necesidades.</p>
+            <a routerLink="productos" class="btn">Ver productos</a>
+        </div>
+    </div>
+
+    <div class="container-cosas">
+        <div class="fila">
+            <div class="ofer">
+                <h2>¿Qué ofrecemos?</h2>
+                <ul>
+                    <li>Moda y accesorios: Encuentra las últimas tendencias en ropa, calzado y accesorios para todas las
+                        edades y estilos.</li>
+                    <li>Tecnología: Desde los gadgets más novedosos hasta dispositivos electrónicos esenciales, tenemos
+                        todo lo que necesitas para estar a la vanguardia.</li>
+                    <li>Hogar y decoración: Dale un toque único a tu hogar con nuestra selección de productos de
+                        decoración, muebles y utensilios de cocina.</li>
+                    <li>Salud y belleza: Cuida de ti mismo con nuestros productos de bienestar, cuidado personal y
+                        belleza.</li>
+                </ul>
+            </div>
+            <div class="elegir">
+                <h2>¿Por qué elegirnos?</h2>
+                <ul>
+                    <li>Calidad garantizada: Seleccionamos cuidadosamente cada producto para asegurarnos de que cumpla
+                        con los más altos estándares de calidad.</li>
+                    <li>Precios competitivos: Ofrecemos precios accesibles sin comprometer la calidad, para que siempre
+                        obtengas el mejor valor por tu dinero.</li>
+                    <li>Atención al cliente excepcional: Nuestro equipo está siempre disponible para ayudarte con
+                        cualquier consulta o problema que puedas tener.</li>
+                    <li>Envíos rápidos y seguros: Nos aseguramos de que tus compras lleguen a tu puerta de manera rápida
+                        y segura.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="unete">
+            <h2>Únete a nuestra comunidad</h2>
+            <p>En Estafados, no solo compras, sino que también formas parte de una comunidad que valora la calidad, la
+                innovación y el buen servicio. Síguenos en nuestras redes sociales para estar al tanto de las últimas
+                novedades, promociones exclusivas y mucho más.</p>
+                <a routerLink="contacto" class="btn">Contactanos</a>
+        </div>
     </div>
 </div>
