--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -31,7 +31,7 @@
     flex-shrink: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    display: flex;
 }
 
 .card-content h2 {
@@ -71,4 +71,8 @@
 
 .btn:active {
     transform: scale(0.95);
+}
+
+@media(max-width: 480px){
+    
 }
