--- a/src/app/detalle-producto/detalle-producto.component.css
+++ b/src/app/detalle-producto/detalle-producto.component.css
@@ -5,6 +5,7 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 130px;
 }
 
 .container h1 {
