--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,15 +1,3 @@
-.banner {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-}
-
-.banner img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
 .contenido {
     position: absolute;
     top: 50%;
@@ -29,7 +17,7 @@
     margin-bottom: 30px;
 }
 
-.contenido .btn {
+.btn {
     display: inline-block;
     padding: 10px 20px;
     background-color: #ff5722;
@@ -39,6 +27,104 @@
     transition: background-color 0.3s ease;
 }
 
-.contenido .btn:hover {
+.btn:hover {
     background-color: #ff7043;
+} 
+
+.container{
+    margin-top: 130px;
+    
+}
+.slider-frame {
+    width: 80%;
+    height: auto;
+	margin:50px auto 0;
+	overflow: hidden;
+    position: relative;
+ 
+}
+
+.slider-frame ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
+	
+	animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slider-frame li {
+	width: 100%;
+	list-style: none;
+}
+
+.slider-frame img {
+	width: 100%;
+    border-radius: 15px;
+}
+
+@keyframes slide {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+
+.container-cosas {
+    padding: 20px;
+    width: 80%;
+    justify-content: center;
+    margin: 0 auto 0;
+}
+
+.fila {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.ofer, .elegir {
+    flex: 1;
+    padding: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+.ofer h2, .elegir h2{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.unete {
+    margin-top: 20px;
+    padding: 40px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.unete h2{
+    margin-bottom: 20px;
+}
+.unete .btn{
+    margin-top: 16px;
+}
+
+@media (min-width: 768px) {
+    .fila {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .ofer, .elegir {
+        max-width: 48%;
+    }
+
+    .unete {
+        width: 100%;
+    }
 }
