--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
- 
+    margin-top: 100px;
 }
 
 /* Título principal */
@@ -34,7 +34,8 @@ h1 {
 .container-cards {
     display:flex;
     flex-wrap: wrap;
-    gap: 20px; 
+   
     width: 100%;
+    justify-content: center;
 }
     
