--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-navbar/>
-<router-outlet/>
+<div class="wrapper">
+    <div class="content">
+        <app-navbar />
+        <router-outlet />
+    </div>
+    <app-footer />
+</div>
