--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a routerLink="home"><b>home</b></a></li>
             <li><a routerLink="productos"><b>Productos</b></a></li>
-            <li><a href="#"><b>Contacto</b></a></li>
+            <li><a routerLink="contacto"><b>Contacto</b></a></li>
         </ul>
     </nav>
 </header>
