--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-body{
-     background-color: #EBEBEB;
-} 
+html, body {
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #EBEBEB;
+}
