--- a/src/app/detalle-producto/detalle-producto.component.css
+++ b/src/app/detalle-producto/detalle-producto.component.css
@@ -6,51 +6,64 @@
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-top: 130px;
-}
-
-.container h1 {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .container h1 {
     text-align: center;
     color: #333;
-}
-
-.container-producto {
+  }
+  
+  .container-producto {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     gap: 20px;
+  }
+  
+.imagen{   
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    display: flex;
+    margin-top: 70px;
 }
-
-.imagen img {
-    width: 400px;
+  
+  .imagen img {
+    width: 100%;
+    max-width: 400px;
     height: auto;
     border-radius: 10px;
-}
-
-.detalles-productos {
+  }
+  
+  .detalles-productos {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
-}
-
-.titulo h2 {
+    text-align: center;
+  }
+  
+  .titulo h2 {
     margin: 0;
-    font-size: 32px;
+    font-size: 24px;
     color: #333;
-}
-
-.descripcion p {
+  }
+  
+  .descripcion p {
     margin: 20px 0;
     font-size: 18px;
     color: #666;
-}
-
-.precio p {
+  }
+  
+  .precio p {
     font-size: 24px;
     color: #007bff;
     margin-bottom: 20px;
-}
-
-.detalles-productos button {
+  }
+  
+  .detalles-productos button {
     padding: 15px 30px;
     font-size: 18px;
     color: white;
@@ -59,13 +72,40 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.1s;
-    align-self: flex-start;
-}
-
-.detalles-productos button:hover {
+  }
+  
+  .detalles-productos button:hover {
     background-color: #0056b3;
-}
-
-.detalles-productos button:active {
+  }
+  
+  .detalles-productos button:active {
     transform: scale(0.95);
-}
+  }
+  
+  
+  @media (min-width: 768px) {
+    .container-producto {
+      flex-direction: row;
+      align-items: flex-start;
+    }
+  
+    .imagen {
+      flex: 1; 
+    }
+  
+    .imagen img {
+      max-width: 100%; 
+      height: auto;
+    }
+  
+    .detalles-productos {
+      flex: 2; 
+      text-align: left;
+      padding-left: 20px;
+    }
+  
+    .titulo h2 {
+      font-size: 32px;
+    }
+  }
+  
