--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
+    height: 10%;
 }
 .logo .img-logo{
     width: 140px;
