--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -15,27 +15,75 @@ h1 {
     color: #FF5722;
 }
 
-/* Contenedor del buscador */
-.search-container {
-    width: 100%;
-    max-width: 600px;
-    margin-bottom: 20px;
-}
-
-.search-container input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 1em;
-}
 
 /* Contenedor de las tarjetas */
 .container-cards {
     display:flex;
     flex-wrap: wrap;
-   
     width: 100%;
     justify-content: center;
 }
-    
+
+.filters-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+  
+  .search-container {
+    flex: 1 1 auto;
+    margin-right: 20px;
+  }
+  
+  .search-container input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .product-filter {
+    flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+  }
+  
+  .product-filter label {
+    margin-right: 10px;
+  }
+  
+  .product-filter select {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  @media (max-width: 768px) {
+    .filters-container {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  
+    .search-container {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+  
+    .product-filter {
+      justify-content: space-between;
+    }
+  
+    .product-filter label {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+  
+    .product-filter select {
+      width: 100%;
+    }
+  }
+  
